# magpub

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: magpub.yml
data_analysis/: PEARC-26-publication-analysis-chameleon-cloud.ipynb
data_analysis/data/: publications.csv  rawpublications.csv
docs/: candidate_template.csv  conf.py  google_scholar.md  index.rst  modules.rst
magpub/: __init__.py  __main__.py  cli.py  config.py  csv_reader.py  csv_writer.py  deduplicate.py  importer.py  models.py  types.py  utils.py
magpub/sources/: __init__.py  openalex.py  science_direct.py  scopus.py  semantic_scholar.py
tests/: test_deduplicate.py  test_utils.py
