[project]
name = "magpub"
version = "0.1.0"
description = "Tool for collecting academic publications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Chameleon Cloud Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "requests>=2.28.0",
    # Allow click 7.x for compatibility with celery 5.1 while remaining
    # compatible with newer click releases when possible.
    "click>=7.0,<9.0",
    "tomli>=1.0,<3.0;python_version<'3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
scopus = ["pybliometrics>=4.0"]
science_direct = ["pybliometrics>=4.0"]
dev = [
    "pytest>=7.0",
    "black>=21.0",
    "flake8>=5.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
]

[project.scripts]
magpub = "magpub.cli:cli"

[project.urls]
Repository = "https://github.com/ChameleonCloud/magpub"
Documentation = "https://magpub.readthedocs.io"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["magpub*"]
exclude = ["tests*"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
